# tinkoff

./: .clinerules  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: client.rs  domain.rs  lib.rs  main.rs  progress.rs  ux.rs
src/domain/: calendar.rs  history.rs  mod.rs  money.rs  paper.rs  portfolio.rs  risk.rs
src/domain/display/: calendar.rs  history.rs  labels.rs  mod.rs  portfolio.rs  risk.rs
