[package]
name = "tinkoff"
description = "Tinkoff investments console client"
repository = "https://github.com/aegoroff/tinkoff"
homepage = "https://github.com/aegoroff/tinkoff"
authors = ["egoroff <egoroff@gmail.com>"]
edition = "2021"
license = "MIT"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinkoff-invest-api = { version = "0.3.0" }
tokio = {version = "1.43.0", features = ["full"]}
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
iso_currency = "0.5.1"
itertools = "0.14.0"
indicatif = "0.17.11"
num-format = "0.4.4"
comfy-table = "7.1.4"
clap = { version = "4.5.28", features = ["std", "color", "cargo"] }
color-eyre = "0.6.3"
chrono = { version="0.4.39", default-features = false }
prost-types = "0.11.9"

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "0.1.43"

[dev-dependencies]
rstest = "0.24.0"

[profile.release]
lto = true
strip = true
panic = 'abort'

[lints.rust]
unsafe_code = "forbid"
